# A2A

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  IMPLEMENTED_MVP.md  MVP_IMPLEMENTATION_ROADMAP.md  MVP_SCOPE.md  PORTFOLIO_CASE.md  PROJECT_PLAN.md  REAL_A2A_CONTOUR.md  RFC-001-trusted-a2a-procurement.md  THREAT_MODEL.md
frontend/: Dockerfile  nginx.conf
frontend/src/: App.tsx  api.ts  styles.css  types.ts
migrations/versions/: 0003_tracing_and_outbox.py
src/sber_a2a/: a1_service.py  a2a_gateway.py  api.py  config.py  container.py  demo.py  mcp.py
src/sber_a2a/domain/: models.py  ranking.py
src/sber_a2a/integrations/: contracts.py  mock.py
src/sber_a2a/services/: deals.py  llm.py  onboarding.py  store.py
src/sber_a2a/suppliers/: a2a_service.py  base.py  mock.py  remote.py
src/sber_a2a/workflow/: __init__.py  graph.py
tests/: conftest.py  test_api.py  test_approval.py  test_contracts.py  test_llm_config.py  test_mcp.py  test_onboarding.py  test_ranking.py
