[project]
name = "sber-a2a-procurement"
version = "0.1.0"
description = "Trusted A2A procurement MVP: A1 client, A2 suppliers, A3 Sber orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.1,<2.0",
    "aiosqlite>=0.21,<1.0",
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.116,<1.0",
    "fastmcp>=3.0,<4.0",
    "httpx>=0.28,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-gigachat>=0.3,<1.0",
    "langchain-openrouter>=0.2.5,<1.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
a2a-api = "sber_a2a.main:run"
a2a-client-agent = "sber_a2a.a1_service:run"
a2a-demo = "sber_a2a.demo:run"
a2a-supplier = "sber_a2a.suppliers.a2a_service:run"

[dependency-groups]
dev = [
    "pytest>=8.4,<10.0",
    "pytest-asyncio>=1.1,<2.0",
    "ruff>=0.12,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sber_a2a"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF001"]
